--- a/style.css
+++ b/style.css
@@ -109,6 +109,10 @@ ul#applist{
     box-shadow: none;
     }
     
+.newAppForm{
+	margin-top: 30px;
+}
+    
 textarea, textarea.form-control, input.form-control, input[type=text], input[type=password], input[type=email], input[type=number], [type=text].form-control, [type=password].form-control, [type=email].form-control, [type=tel].form-control, [contenteditable].form-control{
 	 padding: 7px;
  }
