--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 body{
 	font-family: 'Open Sans', sans-serif;
 	color: #19273C;
+    line-height: 1.6;
 }
 
 p{
@@ -140,9 +141,19 @@ textarea, textarea.form-control, input.form-control, input[type=text], input[typ
  
 .control-label{
 	font-size: 16px;
-	font-weight: 500;
+	font-weight: 600;
 }
  
 .help-block{
 	color: #4b759b;
 	}
+    
+.appDetails h3{
+    margin-bottom: 20px;
+}
+
+.appDetails .title p{
+    font-weight: 600;
+    font-size: 16px;
+    text-align: right;
+}
