--- a/style.css
+++ b/style.css
@@ -157,3 +157,10 @@ textarea, textarea.form-control, input.form-control, input[type=text], input[typ
     font-size: 16px;
     text-align: right;
 }
+
+.user-control p{
+    font-size: 90%;
+    margin-bottom: 0px;
+    text-align: right;
+    line-height: 1.3;
+}
