--- a/style.css
+++ b/style.css
@@ -164,3 +164,7 @@ textarea, textarea.form-control, input.form-control, input[type=text], input[typ
     text-align: right;
     line-height: 1.3;
 }
+
+.title{
+    text-align: center;
+}
