--- a/style.css
+++ b/style.css
@@ -168,3 +168,14 @@ textarea, textarea.form-control, input.form-control, input[type=text], input[typ
 .title{
     text-align: center;
 }
+
+.netid-login{
+    display: block;
+    margin: 0 auto;
+    height: 49px;
+    width: 250px;
+    background: url('images/netID-login.png') 0px 0px/250px 49px no-repeat no-repeat;
+}
+.netid-login:hover, .netid-login:active, .netid-login:focus{
+    background: url('images/netID-login-light.png') 0px 0px/250px 49px no-repeat no-repeat;
+}
